--- a/deep_link_demo/android/app/src/main/AndroidManifest.xml
+++ b/deep_link_demo/android/app/src/main/AndroidManifest.xml
@@ -24,6 +24,13 @@
                 <category android:name="android.intent.category.BROWSABLE" />
                 <data android:scheme="myapp" android:host="details" />
             </intent-filter>
+            <!-- Support profile links like myapp://profile/alex -->
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="myapp" android:host="profile" />
+            </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
